WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
49771
[chromium] Fix whitespace character handling in complex text on linux
https://bugs.webkit.org/show_bug.cgi?id=49771
Summary
[chromium] Fix whitespace character handling in complex text on linux
James Simonsen
Reported
2010-11-18 17:18:47 PST
[chromium] Fix whitespace character handling in complex text on linux
Attachments
Patch
(108.59 KB, patch)
2010-11-18 17:27 PST
,
James Simonsen
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
James Simonsen
Comment 1
2010-11-18 17:27:39 PST
Created
attachment 74326
[details]
Patch
James Simonsen
Comment 2
2010-11-18 17:44:18 PST
Hi guys, Sorry to keep bugging you with these patches. I signed up to fix the fast/text layout tests for Chrome, so I'll periodically be sending out patches like this. If I should CC someone else, let me know.
Tony Chang
Comment 3
2010-11-18 17:50:05 PST
The updated images look correct to me (seem to match the mac results), but I'll leave the actual review to agl.
Tony Chang
Comment 4
2010-11-19 12:47:53 PST
Evan said he could do a review of this as well.
Adam Langley
Comment 5
2010-11-19 13:02:49 PST
Comment on
attachment 74326
[details]
Patch LGTM
WebKit Commit Bot
Comment 6
2010-11-19 16:05:12 PST
Comment on
attachment 74326
[details]
Patch Rejecting patch 74326 from commit-queue. Failed to run "['./WebKitTools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '--bot-id=eseidel-cq-sl', 'build', '--no-clean', '--no-update', '--build-style=both']" exit_code: 2 Last 500 characters of output: 4 c++ com.apple.compilers.gcc.4_2 CompileC /Projects/CommitQueue/WebKitBuild/WebCore.build/Release/WebCore.build/Objects-normal/x86_64/SVGTextContentElement.o /Projects/CommitQueue/WebCore/svg/SVGTextContentElement.cpp normal x86_64 c++ com.apple.compilers.gcc.4_2 CompileC /Projects/CommitQueue/WebKitBuild/WebCore.build/Release/WebCore.build/Objects-normal/x86_64/SVGTitleElement.o /Projects/CommitQueue/WebCore/svg/SVGTitleElement.cpp normal x86_64 c++ com.apple.compilers.gcc.4_2 (8 failures) Full output:
http://queues.webkit.org/results/6156084
Tony Chang
Comment 7
2010-11-19 16:16:27 PST
Comment on
attachment 74326
[details]
Patch Try again
WebKit Commit Bot
Comment 8
2010-11-19 17:50:19 PST
The commit-queue encountered the following flaky tests while processing
attachment 74326
[details]
: compositing/iframes/overlapped-nested-iframes.html Please file bugs against the tests. These tests were authored by
simon.fraser@apple.com
. The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 9
2010-11-19 17:52:15 PST
Comment on
attachment 74326
[details]
Patch Clearing flags on attachment: 74326 Committed
r72459
: <
http://trac.webkit.org/changeset/72459
>
WebKit Commit Bot
Comment 10
2010-11-19 17:52:21 PST
All reviewed patches have been landed. Closing bug.
Eric Seidel (no email)
Comment 11
2010-11-20 04:28:12 PST
Do we know what went wrong with the cq? Its hard to tell from my phone...
James Simonsen
Comment 12
2010-11-22 11:27:51 PST
(In reply to
comment #11
)
> Do we know what went wrong with the cq? Its hard to tell from my phone...
I couldn't find anything in the output. It said there were 8 failures, but there wasn't any indication of them in the log. The same thing happened to me on this bug:
https://bugs.webkit.org/show_bug.cgi?id=49101
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug