2010-11-19  James Simonsen  <simonjam@chromium.org>

Reviewed by Tony Chang.

        [chromium] Fix whitespace character handling in complex text on linux
        https://bugs.webkit.org/show_bug.cgi?id=49771

        * platform/chromium-linux/fast/text/international/bidi-linebreak-001-expected.checksum: Remove null glyph from expected output.
        * platform/chromium-linux/fast/text/international/bidi-linebreak-001-expected.png: Ditto.
        * platform/chromium-linux/fast/text/international/bidi-linebreak-001-expected.txt: Ditto.
        * platform/chromium-linux/fast/text/international/bidi-linebreak-002-expected.checksum: Ditto.
        * platform/chromium-linux/fast/text/international/bidi-linebreak-002-expected.png: Ditto.
        * platform/chromium-linux/fast/text/international/bidi-linebreak-002-expected.txt: Ditto.
        * platform/chromium-linux/fast/text/international/bidi-linebreak-003-expected.checksum: Ditto.
        * platform/chromium-linux/fast/text/international/bidi-linebreak-003-expected.png: Ditto.
        * platform/chromium-linux/fast/text/international/bidi-linebreak-003-expected.txt: Ditto.
        * platform/chromium-linux/fast/text/wide-zero-width-space-expected.checksum: Added. Now passes on Linux.
        * platform/chromium-linux/fast/text/wide-zero-width-space-expected.png: Added.
        * platform/chromium-linux/fast/text/wide-zero-width-space-expected.txt: Added.
        * platform/chromium/test_expectations.txt: Removed LINUX from wide-zero-width-space.
2010-11-19  James Simonsen  <simonjam@chromium.org>

        Reviewed by Tony Chang.

        [chromium] Fix whitespace character handling in complex text on linux
        https://bugs.webkit.org/show_bug.cgi?id=49771

        * platform/graphics/SimpleFontData.h:
        (WebCore::SimpleFontData::isZeroWidthSpaceGlyph): Added.
        (WebCore::SimpleFontData::boundsForGlyph): Use isZeroWidthSpaceGlyph().
        (WebCore::SimpleFontData::widthForGlyph): Use isZeroWidthSpaceGlyph().
        * platform/graphics/chromium/FontLinux.cpp:
        (WebCore::TextRunWalker::nextScriptRun): Cache currently used font data.
        (WebCore::TextRunWalker::setGlyphXPositions): Skip zero width spaces.
        (WebCore::TextRunWalker::normalizeSpacesAndMirrorChars): Normalize zero width spaces.
        (WebCore::TextRunWalker::getNormalizedTextRun):

Canonical link: https://commits.webkit.org/62921@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@72459 268f45cc-cd09-0410-ab3c-d52691b4dbfc